--- a/codeStyle/index.html
+++ b/codeStyle/index.html
@@ -13,7 +13,15 @@
 <body>
     <div class="container">
         <div class="row">
-            <div
+            <div class="col-12 jumbotron mb-3 team-heading">
+                <h2 class="text-center">Team</h2>
+            </div>
+        </div>
+    </div>
+    <div class="container">
+        <div class="row">
+            <div class="team-area col-12 d-flex jsutify-content">
+            </div>
         </div>
     </div>
     
