--- a/codeStyle/index.html
+++ b/codeStyle/index.html
@@ -11,7 +11,7 @@
 
 </head>
 <body>
-    <div class="container">
+    <div class="container-fluid">
         <div class="row">
             <div class="col-12 jumbotron mb-3 team-heading">
                 <h2 class="text-center">Team</h2>
@@ -20,7 +20,22 @@
     </div>
     <div class="container">
         <div class="row">
-            <div class="team-area col-12 d-flex jsutify-content">
+            <div class="team-area col-12 d-flex justify-content-center">
+                
+        <div class="card employee-card">
+        <div class="card-header">
+            <h2 class="card-title"></h2>
+            <h3 class="card-title"><i class="fas mr-2"></i></h3>
+        </div>
+        <div class="card-body">
+            <ul class="list-group">
+                <li class="list-group-item">ID:</li>
+                <li class="list-group-item">Email: <a href="mailto:"></a></li>
+                <li class="list-group-item">Office Number:</li>
+            </ul>
+        </div>
+    </div>
+        
             </div>
         </div>
     </div>
